// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render <Observer /> render outside view 1`] = `
<InView
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    false
  </div>
</InView>
`;

exports[`Should render <Observer /> render when in view 1`] = `
<InView
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    true
  </div>
</InView>
`;

exports[`should render plain children 1`] = `
<InView
  threshold={0}
  triggerOnce={false}
>
  <div>
    inner
  </div>
</InView>
`;

exports[`should render with className 1`] = `
<InView
  className="inner-class"
  threshold={0}
  triggerOnce={false}
>
  <div
    className="inner-class"
  >
    inner
  </div>
</InView>
`;

exports[`should render with tag 1`] = `
<InView
  tag="span"
  threshold={0}
  triggerOnce={false}
>
  <span>
    inner
  </span>
</InView>
`;
